Aesthetic changes, dropdown fixed, working on collapsable sidebar, searchbar progress

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
 
 .box {
   border: lightgray 1px solid;
-  margin: 5px;
-  padding: 5px;
+  margin: 1%;
+  padding: 1%;
   float: center;
 }
 
@@ -43,6 +43,7 @@ input {
 .side {
   text-align: center;
   margin: 0;
+  float: center;
 }
 
 .sidebar {
@@ -56,12 +57,15 @@ input {
   width: 100%;
   display: inline-block;
   align-items: center;
+  padding: 2%;
+  background-color: #283b32;
 }
 
 .notes_home {
   background-color: #dad7cd;
   display: inline;
   width: 80%;
+  height: 100%;
   float: right;
 }
 
@@ -71,12 +75,16 @@ input {
 }
 
 .title_header {
-  background-color: #46322c;
+  background-color: #3a5a40;
   display: flex;
-  padding: 10px;
+  padding: 1%;
   font-family: Quicksand;
   text-align: left;
   color: white;
+}
+
+.username {
+  font-size: 100%;
 }
 
 .title_input {
@@ -102,18 +110,25 @@ input {
   float: right;
 }
 
+.subheader {
+  border: none;
+  margin: 0;
+  padding: 2%;
+  background-color: #588157;
+}
+
 .subheader_btns {
   display: block;
   width: 100%;
   border: none;
-  margin: 5px;
-  padding: 1%;
+  margin: 0;
+  padding: 2%;
 }
 
-.user_btns_box {
+/* .user_btns_box {
   margin: 10px;
   padding: 10px;
-}
+} */
 
 .error {
   font-family: Quicksand;
@@ -198,12 +213,31 @@ input {
   float: right;
 }
 
+.search_box {
+  width: 50%;
+  float: right;
+}
+
+.searchbar {
+  display: inline;
+  width: 80%;
+  resize: none;
+}
 
 /* ------------------------------------------------------------- */
 /* COMPONENT: SETTING LIST */
 
 .dropdown {
   display: block;
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  z-index: 1;
+  width: 100%;
+}
+
+.dropdown_div {
+  position: relative;
 }
 
 .dropdownItem {
@@ -211,4 +245,5 @@ input {
   flex-grow: 1;
   border: 0.5px solid grey;
   height: 25px;
+
 }
